# agentic-layer

./: .agentic  .gitignore  .venv  README.md  SETUP.md  pyproject.toml
src/agentic/: __init__.py  agent.py  archive.py  auth.py  ci_loop.py  cli.py  client_config.py  context.py  events.py  logging.py  mcp.py  memory.py  pricing.py  retro.py  runner.py  scripts.py  state.py  workflow.py
src/agentic/scaffold/clients/: purpl.yaml
src/agentic/scaffold/prompts/: ci_fix.md  design_audit.md  design_brief.md  design_direction.md  design_implement.md  design_review.md  docs.md  docs_review.md  explore.md  fix.md  implement.md  mcp_filesystem.md  pr.md  pr_docs.md  repro.md  retro.md  review.md  spec.md  test.md
src/agentic/scaffold/workflows/: bugfix.yaml  designer.yaml  docs.yaml  feature.yaml  filesystem-mcp.yaml  retrospective.yaml
src/agentic/watch/: __init__.py  app.py  models.py  panes.py  tail.py
tests/: conftest.py  test_archive.py  test_auth.py  test_ci_loop.py  test_client_config.py  test_cost.py  test_deploy.py  test_events.py  test_fork.py  test_helm_context.py  test_integration.py  test_mcp.py  test_memory.py  test_pause_resume.py  test_retro.py  test_runner.py  test_schema.py  test_scripts.py  test_watch.py  test_workflow.py
tests/fixtures/: test-workflow.yaml
